border cleanup, shadow correction, image shadow, font not aligned on header type anymore

--- a/magicCard/css/style.css
+++ b/magicCard/css/style.css
@@ -30,11 +30,14 @@
     display: flex;
     flex-direction: column; }
     .card-frame-text-area {
+      margin: 0 auto;
+      width: 97.5%;
       font-size: 24px;
       height: 35%;
       border: 1px solid #313131;
       background-image: url("../assets/texture.jpg");
-      background-repeat: repeat-y; }
+      background-repeat: repeat-y;
+      box-shadow: 0 0 0 5px #313131, -3px 3px 2px 5px #000; }
     .card-frame-description {
       margin: 5% 0 0 2%; }
       .card-frame-description-break {
@@ -47,23 +50,26 @@
     align-items: center;
     justify-content: space-between; }
   .card-artwork {
+    z-index: -1;
     text-align: center;
     margin: 0 auto;
     width: 97.5%;
     max-height: 55%;
     overflow: hidden;
-    border-left: 2px solid #313131;
-    border-right: 2px solid #313131; }
+    border-left: 2px solid #000;
+    border-bottom: 6px solid #000;
+    box-shadow: 0 0 0 5px #313131, -3px 3px 2px 5px #000; }
   .card-header--type {
+    z-index: 1;
     font-family: "Beleren Bold";
     font-size: 20px;
-    border-bottom: 4px solid #313131;
     border-left: 2px solid #313131;
     border-top: 1px solid #313131;
     border-right: 1px solid #313131;
     border-radius: 18px/40px;
     background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../assets/texture.jpg");
-    padding: 2px 10px; }
+    padding: 2px 10px;
+    box-shadow: 0 0 0 5px #313131, -3px 3px 2px 5px #000; }
   .card-header--set-icon {
     font-family: "Beleren Bold";
     float: right;
@@ -78,14 +84,14 @@
   font-family: "Beleren Bold";
   display: flex;
   justify-content: space-between;
-  border-bottom: 4px solid #313131;
   border-left: 2px solid #313131;
   border-top: 1px solid #313131;
   border-right: 1px solid #313131;
   margin-top: 6px;
   border-radius: 18px/40px;
   padding-left: 10px;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../assets/texture.jpg"); }
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../assets/texture.jpg");
+  box-shadow: 0 0 0 2px #000, 0 0 0 5px #313131, -3px 3px 2px 5px #000; }
 
 .icon-container {
   display: flex; }
